# bp-project

./: .gitignore  CMakeLists.txt  README.md  ending.h  gameplay.h  main.c  map.c  map.h  menu.c  menu.h  pacman.c  player.h  score.h  screen.h  screen_ending.c  screen_gameplay.c  screen_menu.c  screen_score.c  temp.c
src/: main.c  map.c  map.h  pacman.h  screen.h  screen_ending.c  screen_gameplay.c  screen_menu.c  screen_name.c  screen_score.c
src/screens/: ending_screen.c  gameplay_screen.c  menu_screen.c  name_screen.c  score_screen.c  screen.h  screen_ending.c  screen_gameplay.c  screen_score.c
tools/: pacman1
